--- a/ParallelComputingLabs/Lab1/MainWindow.xaml
+++ b/ParallelComputingLabs/Lab1/MainWindow.xaml
@@ -17,6 +17,7 @@
             <ColumnDefinition/>
             <ColumnDefinition/>
         </Grid.ColumnDefinitions>
+        <TextBlock Grid.Row="0" Grid.Column="1" Text="{Binding ElapsedMs}"></TextBlock>
         <Button 
             Grid.Row="1" 
             Grid.Column="1" 
